[package]
name = "CodeColosseum"
version = "0.0.1"
authors = ["Dario Ostuni <dario.ostuni@gmail.com>"]
edition = "2018"

[[bin]]
name = "cocod"
path = "src/server.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.14", features = ["connect", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.2"
async-trait = "0.1"
clap = "3.0.0-beta.2"

[target.'cfg(unix)'.dependencies]
nix = "0.20"
