[package]
name = "CodeColosseum"
version = "0.0.1"
authors = ["Dario Ostuni <dario.ostuni@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[[bin]]
name = "coco"
path = "src/client.rs"

[[bin]]
name = "cocod"
path = "src/server.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.14", features = ["connect", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-journald = "0.1"
async-trait = "0.1"
futures-util = "0.3"
clap = { version = "3", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
data-encoding = "2"
rand = { version = "0.8", features = ["small_rng"] }
regex = "1"
whoami = "1"
tempfile = "3"
prettytable-rs = "0.8"

[target.'cfg(unix)'.dependencies]
nix = "0.20"
